--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -22,6 +22,12 @@
 			}
 		]
 	},
+	"kv_namespaces": [
+		{
+			"binding": "USERS_NOTIFICATION_CONFIG",
+			"id": "<BINDING_ID>"
+		}
+	],
 	"observability": {
 		"enabled": true
 	}
